2003-01-17  Adam Byrtek  <alpha@debian.org>

	* doc/mc.1.in (Layout): Document 'Xterm window title' option.

2003-01-16  David Martin  <dmartina@excite.com>

	* doc/mc.1.in: Add EXTernal virtual File System node (extfs).

2003-01-16  David Martin  <dmartina@excite.com>

	* doc/mc.1.in: Set man page header and footer.
	* doc/es/mc.1.in: Likewise.
	* doc/hu/mc.1.in: Likewise.
	* doc/it/mc.1.in: Likewise.
	* doc/pl/mc.1.in: Likewise.
	* doc/ru/mc.1.in: Likewise.

2003-01-12  David Martin  <dmartina@excite.com>

	* po/es.po: Update. Rewrite localized names for some menu entries.
	* doc/es/mc.1.in: Likewise.
	* lib/mc.hint.es: Likewise.

2002-12-27  David Martin  <dmartina@excite.com>

	* doc/pl/xnc.hlp: Update GPL (change FSF address and move 19xx
	entries to "year").

2002-12-26  Pavel Roskin  <proski@gnu.org>

	* configure.in: Release 4.6.0-pre2, bump version to 4.6.0-pre2a.

	* configure.in: Fix non-portable operator.  Bump version to
	4.6.0-pre2.

2002-12-24  Pavel Roskin  <proski@gnu.org>

	* lib/mc.ext.in: Use --nosignature with rpm to avoid a message
	in the viewer about unsigned packages.

	* acinclude.m4 (MC_WITH_SLANG): Don't add -lslang to MCLIBS if
	the system S-Lang is rejected.

	* lib/mc.ext.in: Play *.mov by mplayer.

2002-12-23  Pavel Roskin  <proski@gnu.org>

	* configure.in: Enable X11 support by default, use --without-x
	to disable.

2002-12-19  Pavel Roskin  <proski@gnu.org>

	* syntax/perl.syntax: Add separate context for function
	declarations and definitions, highlight prototypes.

2002-12-11  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_EXTFS_CHECKS): Add check for Perl.
	* configure.in: Substitute Perl location in all extfs scripts
	written in Perl.

2002-12-11  David Martin  <dmartina@excite.com>

	* doc/xnc.hlp: Update GPL (change FSF address
	and move 19xx entries to "year").
	* doc/es/xnc.hlp: Likewise.
	* doc/hu/xnc.hlp: Likewise.
	* doc/it/xnc.hlp: Likewise.
	* doc/ru/xnc.hlp: Likewise.

2002-12-09  Pavel Roskin  <proski@gnu.org>
