@@ -2,9 +2,9 @@ DIST_SUBDIRS = es hu it pl ru
 SUBDIRS = $(DOC_LINGUAS)
 
 if USE_MCFS
-man_MANS = mc.1 mcedit.1 mcserv.8
+man_MANS = mc.1 mcedit.1 mcview.1 mcserv.8
 else
-man_MANS = mc.1 mcedit.1
+man_MANS = mc.1 mcedit.1 mcview.1
 endif
 
 pkgdata_DATA = mc.hlp
