@@ -1,3 +1,9 @@
+2003-01-19  Adam Byrtek  <alpha@debian.org>
+
+	* doc/mcview.1.in: New file.
+	* configure.in: Treat it like doc/mcedit.1.in.
+	* doc/Makefile.am: Likewise.
+
 2003-01-17  Adam Byrtek  <alpha@debian.org>
 
 	* doc/mc.1.in (Layout): Document 'Xterm window title' option.
